Bug 30952: Fix position shift when hovering .linktools links
Issue #6

--- a/koha-tmpl/intranet-tmpl/prog/css/addbiblio.css
+++ b/koha-tmpl/intranet-tmpl/prog/css/addbiblio.css
@@ -360,7 +360,7 @@ tbody tr.active td {
     padding: .5em 0;
 }
 
-.tag_anchors a, a:hover {
+.tag_anchors a {
     border-right: 1px solid #EDF4F6;
     display: inline-block;
     padding: 0 .4em;
